--- a/SCSS/Globals/_vars.scss
+++ b/SCSS/Globals/_vars.scss
@@ -5,7 +5,8 @@
   --paragraph: #4f5665;
   --bg: #ffffff;
   --boarder-color: #dddddd;
-  --dark-bg: #f8f8f8;
+  --dark-bg:  #F8F8F8 ;
+  --footer-bg: #DDE0E4;
   --main: #0b132a;
   --footer-sign: #afb5c0;
   --dites-color: #dde0e4;
