--- a/SCSS/Components/_media.scss
+++ b/SCSS/Components/_media.scss
@@ -6,7 +6,7 @@
   flex-wrap: wrap;
   max-width: 100%;
   height: 150px;
-  margin: 4rem 2rem;
+  margin: 7rem 2rem 4rem;
   border-radius: var(--radius);
   padding: 1.5rem;
   box-shadow: 0px 20px 20px 0px rgb(13 16 37 / 6%);
