--- a/SCSS/Components/_supscribe.scss
+++ b/SCSS/Components/_supscribe.scss
@@ -1,41 +1,37 @@
-.subscribe{
+.subscribe {
   position: relative;
   display: flex;
   flex-direction: row;
-  max-width: 71.25rem;
+  max-width: 100%;
   margin: 0 auto;
   height: 14.5rem;
   gap: var(--gap);
   background-color: var(--bg);
   padding: 2.6rem 4.3rem;
   justify-content: space-between;
+  text-align: right;
+  transform: translateY(-50%);
   border-radius: var(--radius);
   box-shadow: 0px 20px 20px 20px rgb(5 11 47 / 6%);
-  text-align: right;
+
+
+  
 
   @include responsive(sm) {
     flex-direction: column;
     height: fit-content;
     width: 100%;
-    padding:1rem;
+    padding: 1rem;
     align-items: center;
     gap: 0;
 
-  .section__content{
-  gap: 0;
-  padding:1rem 0;
+    .section__content {
+      gap: 0;
+      padding: 1rem 0;
+    }
+
+    button {
+      transform: translateY(-1.5rem);
+    }
   }
-
-  button{
-    transform: translateY(-1.5rem);
-  }
-
-
-
-
-
-  }
-
 }
-
-
