--- a/SCSS/Layout/_footer.scss
+++ b/SCSS/Layout/_footer.scss
@@ -4,8 +4,8 @@ footer {
   width: 100%;
   height: fit-content;
   align-content: flex-start;
-  padding: 25rem 0 5rem;
-  margin: -25rem auto 0;
+  padding: 10rem 0;
+  margin: -20rem auto 0;
 
   &::before {
     content: "";
@@ -13,7 +13,7 @@ footer {
     top: 0px;
     left: 50%;
     transform: translateX(-50%);
-    background-color: var(--dark-bg);
+    background-color: #ebebeb;
     width: 100vw;
     height: 100%;
     z-index: -1000;
