--- a/SCSS/Pages/_features.scss
+++ b/SCSS/Pages/_features.scss
@@ -16,7 +16,15 @@
   max-width: 600px;
   max-height: 382.44px;
 }
-
+.features__header{
+  font-size: 2.1rem;
+  font-weight: var(--weight-500);
+  max-width: 23.9rem;
+  max-height: 6.2rem;
+  color: var(--main);
+  line-height: 3rem;
+  align-items: start;
+}
 .features-content {
   display: flex;
   flex-direction: column;
@@ -25,6 +33,7 @@
 
   @include responsive(md) {
     align-items: center;
+
   }
 }
 
@@ -37,8 +46,9 @@
   .features-content{
     padding: 1rem;
   }
-  .features__header,.features__header {
+  .features__header {
     width: 100%;
+    text-align: center;
   }
 }
 
